<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CleverHome</string>

    <string name="HOME">HOME group</string>
    <string name="HOME_STATUS">HOME status</string>
    <string name="HOME_POWER">HOME power</string>
    <string name="TEST">TEST group</string>
    <string name="TEST_SUB">TEST group</string>

    <!-- Start window -->
    <string name="no_connection_title">No Internet connection!</string>
    <string name="no_connection_body">Check the connection and try again</string>
    <string name="btn_try_again">Try again</string>

    <!-- Main menu -->
    <string name="status">Status</string>
    <string name="gpio">GPIO</string>
    <string name="opportunities">Opportunities</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="select_action">Select the action</string>

    <!-- Settings menu -->
    <string name="text_input_old_password">Please input old password:</string>
    <string name="text_input_new_password">Please input new password:</string>
    <string name="text_confirm_new_password">Please confirm new password:</string>
    <string name="text_input_email_address">Please input e-mail address:</string>
    <string name="text_input_password_email">Please input password for e-mail address:</string>
    <string name="text_input_bot_email">Please input e-mail address for Raspberry agent:</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>

    <!-- Add menu -->
    <string name="text_input_name">Please input name for opportunity:</string>
    <string name="text_input_subtitle">Please input email subtitle for send to bot if necessary:</string>
    <string name="text_input_commands">Please input commands which necessary for this opportunity:</string>

    <!-- hints -->
    <string name="hint_input_password">Please, input password</string>
    <string name="hint_incorrect_password">Incorrect password!</string>

    <!-- Errors -->
    <string name="err_not_all_fields">Please, set all fields!</string>
    <string name="err_name_exists">Name is already exists!</string>
    <string name="err_incorrect_old_pwd">Incorrect old application password!</string>
    <string name="err_confirm_failed">New password and confirm new password fields are not equal!</string>
    <string name="err_email_address_empty">Please, input email address!</string>
    <string name="err_email_pwd_empty">Please, input password for email!</string>
    <string name="err_first_app_run_pwd">Please, input application password!</string>
    <string name="err_bot_email_address_empty">Please, input email address for Raspberry Agent!</string>
    <string name="err_send_mail">Cannot send message!</string>
    <string name="err_read_mail">Cannot read message!</string>
    <string name="err_update">Update failed!</string>
</resources>
